[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ynx-quant-sdk"
version = "0.2.0.dev0"
description = "Fail-closed YNX Quant Testnet API client"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
